--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2>Adorn your  best world</h2><br>
            <h4> <span>Welcome to exception lounge</span></h4>
            <div class=butt>
-            <button  class="b" type="button" onclick=""  style="border:none"><b>Book</b></button>
+            <a href="https://form.jotform.com/201513873785057"><button  class="b" type="button" onclick=""  style="border:none"><b>Book</b></button></a>
             <button class="s" type="button" onclick=""  style="border:none"><b>Share</b></button>
             <button class="c" type="button" onclick=""  style="border:none"><b>Connect</b></button>
           </div>
