--- a/connect.html
+++ b/connect.html
@@ -74,7 +74,7 @@
          <h1> >>BOOK</h1>
        <img src="img/night_club.jpg">
         <div class="b-button">
-       <button type="button" onclick="">Book here</button>
+          <a  href="https://form.jotform.com/201513873785057"> <button type="button" onclick="">Book here</button></a>
         </div>
        </div>
        <div class="enquire-s">
